# lexigraph

./: .gitignore  LICENSE  Makefile  README.md  test_llm.sh  update_05-13.txt
lexigraph/: pyproject.toml
lexigraph/lexigraph/: azureai_mkt.py  dot2png.py  flair_sentiment.py  flair_tag.py  geminiai.py  groqai.py  lexigraph.py  ollamaai.py  sambanovaai.py  tokens.py
lexigraph/lexigraph/prompts/: dotfile.txt  dotfile2.txt  system.txt
lexigraph/lexigraph/rag/: rag.txt  rag_m.txt  sex.txt  solar.txt  solar_m.txt
