[tool.poetry]
name = "lexigraph"
version = "0.1.0"
description = ""
authors = ["kyle gaspar <kyleg.job@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.3"
google-generativeai = "^0.8.3"
pillow = "^10.4.0"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
